<resources>
    <string name="app_name">Notelin</string>
    <string name="all_notes_deleted">All notes deleted</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="input_your_text">Input your text...</string>
    <string name="no">No</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_deletion_title">Note deletion</string>
    <string name="note_deletion_message">Do you want to delete this note?</string>
    <string name="note_info">Information</string>
    <string name="notes_list_empty">No notes found</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_date">Date</string>
    <string name="title">Title</string>
    <string name="yes">Yes</string>

    <string-array name="main_note_context">
        <item>Open</item>
        <item>@string/note_info</item>
        <item>@string/delete</item>
    </string-array>
</resources>
